--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fa-icons": "^0.2.0",
     "material-icons": "^1.11.11",
     "materialize-css": "^1.0.0-rc.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3"
   }
 }
