--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "material-icons": "^1.11.11",
     "materialize-css": "^1.0.0-rc.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0"
   }
 }
