--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "material-icons": "^1.11.11",
     "materialize-css": "^1.0.0-rc.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "table-sort-js": "^1.8.0",
+    "tablesorter": "^2.31.3"
   }
 }
