--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build-css": "tailwindcss build -i style.css -o /assets/css/tailwindcss.css"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,8 @@
   "homepage": "https://github.com/monica-ayala/Qultura-Admin#readme",
   "devDependencies": {
     "@types/google.maps": "^3.50.1",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "tailwindcss": "^3.1.8"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -35,6 +37,7 @@
     "material-icons": "^1.11.11",
     "materialize-css": "^1.0.0-rc.2",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "tailwindscss": "^0.3.0"
   }
 }
