--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fa-icons": "^0.2.0",
+    "jsonwebtoken": "^8.5.1",
     "material-icons": "^1.11.11",
     "materialize-css": "^1.0.0-rc.2",
     "multer": "^1.4.5-lts.1",
